--- a/_blocks/contact.html
+++ b/_blocks/contact.html
@@ -1,7 +1,7 @@
 ---
 name: contact
 type: light
-title: Let's Get In Touch!
+title: CONTACT
 button_text: # Blank means no button
 button_url: 
 menu_text:  # If left blank this defaults to the id
@@ -13,7 +13,7 @@ In case the standard templates don't suffice, you can still use raw HTML (with l
 {% endcomment %}
 
 <p class="col-lg-8 col-lg-offset-2">
-	Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!
+	お問い合わせ・ご相談は、info@yiaki.jpまでご連絡お願いいたします。
 <p>
 
 {% assign colcount = 0 %}
