--- a/_blocks/contact.html
+++ b/_blocks/contact.html
@@ -13,7 +13,7 @@ In case the standard templates don't suffice, you can still use raw HTML (with l
 {% endcomment %}
 
 <p class="col-lg-8 col-lg-offset-2">
-	お問い合わせ・ご相談は、info@yiaki.jpまでご連絡お願いいたします。
+	お問い合わせ・ご相談は、business@yiaki.jpまでご連絡お願いいたします。
 <p>
 
 {% assign colcount = 0 %}
